--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="products__item mix category-psd" data-order="5">
+                    <div class="products__item mix category-plugins category-popular" data-order="5">
                         <a class="products__item-img" style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
@@ -261,7 +261,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="products__item mix category-psd" data-order="8">
+                    <div class="products__item mix category-psd category-popular" data-order="8">
                         <a class="products__item-img" style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                         <div class="products__item-content">
                             <div class="products__item-name">
@@ -300,7 +300,7 @@
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.15.1/d3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
