--- a/app/index.html
+++ b/app/index.html
@@ -762,11 +762,14 @@
 
                             <g transform="translate(0.000000,73.000000) scale(0.100000,-0.100000)" fill="#000000"
                                 stroke="none">
-                                <path d="M153 715 c-47 -33 -54 -134 -12 -176 17 -17 34 -19 208 -19 104 0 197 3 206 6 40 16 57 101 30 154 -20 38 -43 50 -97 50 -53 0 -101 -28 -119 -68 l-13 -30 -15 30 c-8 17 -29 39 -45 49 -38 23 -113 25 -143 4z m118 -74 c45 -46 39 -61 -24 -61 -57 0 -77 12 -77 45 0 51 56 60 101 16z m263 -3 c14 -41 -6 -58 -70 -58 -64 0 -70 15 -24 61 38 39 80 37 94 -3z" />
+                                <path
+                                    d="M153 715 c-47 -33 -54 -134 -12 -176 17 -17 34 -19 208 -19 104 0 197 3 206 6 40 16 57 101 30 154 -20 38 -43 50 -97 50 -53 0 -101 -28 -119 -68 l-13 -30 -15 30 c-8 17 -29 39 -45 49 -38 23 -113 25 -143 4z m118 -74 c45 -46 39 -61 -24 -61 -57 0 -77 12 -77 45 0 51 56 60 101 16z m263 -3 c14 -41 -6 -58 -70 -58 -64 0 -70 15 -24 61 38 39 80 37 94 -3z" />
                                 <path d="M0 415 l0 -55 155 0 155 0 0 55 0 55 -155 0 -155 0 0 -55z" />
                                 <path d="M400 415 l0 -55 155 0 155 0 0 55 0 55 -155 0 -155 0 0 -55z" />
-                                <path d="M40 186 c0 -120 2 -136 21 -160 20 -25 23 -26 135 -26 l114 0 0 160 0 160 -135 0 -135 0 0 -134z" />
-                                <path d="M400 160 l0 -160 114 0 c112 0 115 1 135 26 19 24 21 40 21 160 l0 134 -135 0 -135 0 0 -160z" />
+                                <path
+                                    d="M40 186 c0 -120 2 -136 21 -160 20 -25 23 -26 135 -26 l114 0 0 160 0 160 -135 0 -135 0 0 -134z" />
+                                <path
+                                    d="M400 160 l0 -160 114 0 c112 0 115 1 135 26 19 24 21 40 21 160 l0 134 -135 0 -135 0 0 -160z" />
                             </g>
                         </svg>
                     </div>
@@ -787,12 +790,8 @@
                             </metadata>
                             <g transform="translate(0.000000,76.000000) scale(0.100000,-0.100000)" fill="#000000"
                                 stroke="none">
-                                <path d="M185 751 c-109 -27 -185 -123 -185 -235 0 -91 12 -109 219 -318 107
-                       -109 202 -198 211 -198 9 0 104 89 211 198 158 160 198 205 207 238 26 90 9
-                       175 -45 235 -90 99 -219 114 -330 38 l-43 -30 -43 29 c-66 46 -131 60 -202 43z
-                       m123 -95 c15 -8 43 -30 61 -50 46 -47 76 -47 122 0 45 48 79 64 131 64 74 0
-                       139 -57 154 -136 11 -59 -24 -109 -190 -274 l-156 -155 -156 155 c-201 200
-                       -222 243 -164 338 40 65 133 92 198 58z" />
+                                <path
+                                    d="M185 751 c-109 -27 -185 -123 -185 -235 0 -91 12 -109 219 -318 107 -109 202 -198 211 -198 9 0 104 89 211 198 158 160 198 205 207 238 26 90 9 175 -45 235 -90 99 -219 114 -330 38 l-43 -30 -43 29 c-66 46 -131 60 -202 43z m123 -95 c15 -8 43 -30 61 -50 46 -47 76 -47 122 0 45 48 79 64 131 64 74 0 139 -57 154 -136 11 -59 -24 -109 -190 -274 l-156 -155 -156 155 c-201 200 -222 243 -164 338 40 65 133 92 198 58z" />
                             </g>
                         </svg>
                     </div>
@@ -805,6 +804,15 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="author" style="background-image: url(images/author-bg.jpg);">
+        <div class="author__box">
+            <div class="author__title">
+                Over <span>20,000</span> Author 
+                Are Involved Here!
+            </div>
+            <a class="author__link" href="#">Become A Author</a>
         </div>
     </section>
 
