ended new-items page

--- a/app/new-items.html
+++ b/app/new-items.html
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                             <div class="product-page__items">
-                                <div class="products__item mix category-psd category-popular">
+                                <div class="products__item">
                                     <a class="products__item-img"
                                         style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                     <div class="products__item-content">
@@ -225,9 +225,13 @@
                                             <a class="products__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="products__item-text">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </div>
                                         </div>
                                         <div class="products__item-price">
                                             $19
+                                            <span>sales (14)</span>
                                         </div>
                                     </div>
                                     <div class="products__item-info">
@@ -237,11 +241,15 @@
                                             <span>Radiustheme</span>
                                         </a>
                                         <div class="products__item-star">
-                                            <div class="rate-star"></div>(<span>05</span>)
+                                            <div class="rate-star"></div>(<span>05</span>)                                            
+                                        </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="products__item mix category-psd category-popular">
+                                <div class="products__item">
                                     <a class="products__item-img"
                                         style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                     <div class="products__item-content">
@@ -252,9 +260,13 @@
                                             <a class="products__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="products__item-text">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </div>
                                         </div>
                                         <div class="products__item-price">
                                             $19
+                                            <span>sales (14)</span>
                                         </div>
                                     </div>
                                     <div class="products__item-info">
@@ -264,11 +276,15 @@
                                             <span>Radiustheme</span>
                                         </a>
                                         <div class="products__item-star">
-                                            <div class="rate-star"></div>(<span>05</span>)
+                                            <div class="rate-star"></div>(<span>05</span>)                                            
+                                        </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="products__item mix category-psd category-popular">
+                                <div class="products__item">
                                     <a class="products__item-img"
                                         style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                     <div class="products__item-content">
@@ -279,9 +295,13 @@
                                             <a class="products__item-category" href="#">
                                                 Site Template
                                             </a>
+                                            <div class="products__item-text">
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                            </div>
                                         </div>
                                         <div class="products__item-price">
                                             $19
+                                            <span>sales (14)</span>
                                         </div>
                                     </div>
                                     <div class="products__item-info">
@@ -291,7 +311,11 @@
                                             <span>Radiustheme</span>
                                         </a>
                                         <div class="products__item-star">
-                                            <div class="rate-star"></div>(<span>05</span>)
+                                            <div class="rate-star"></div>(<span>05</span>)                                            
+                                        </div>
+                                        <div class="products__item-list">
+                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                                            <div class="icon-heart-o">(<span>20</span>)</div>
                                         </div>
                                     </div>
                                 </div>
