--- a/app/new-items.html
+++ b/app/new-items.html
@@ -40,7 +40,7 @@
                     <div class="container">
                         <nav class="menu">
                             <ul class="menu__list">
-                                <li><a href="#">Home</a>
+                                <li><a href="index.html">Home</a>
                                 <li><a href="#">About</a>
                                 <li><a href="#">WordPress</a>
                                 <li><a href="#">Joomla</a>
