--- a/app/404.html
+++ b/app/404.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -203,263 +204,33 @@
                 <div class="container">
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Product Page</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><span>404 Page</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            <section class="product-page">
+            <div class="page-404">
                 <div class="container">
-                    <div class="product-page__inner">
-                        <aside class="product-page__aside">
-                            <div class="category aside__item">
-                                <div class="aside__title">
-                                    Categories
-                                </div>
-                                <ul class="category__list">
-                                    <li><a href="#">WordPress</a><span>(150)</span></li>
-                                    <li><a href="#">Joomla</a><span>(100)</span></li>
-                                    <li><a href="#">PSD</a><span>(50)</span></li>
-                                    <li><a href="#">Plugins</a><span>(60)</span></li>
-                                    <li><a href="#">Components</a><span>(40)</span></li>
-                                </ul>
+                    <div class="page-404__wrapper">
+                        <div class="page-404__head">
+                            Error Page
+                        </div>
+                        <div class="page-404__inner">
+                            <div class="page-404__404">404</div>
+                            <div class="page-404__title">Sorry Page Was Not Found</div>
+                            <div class="page-404__text">
+                                The page you are looking is not available or has been removed.
+                                Try going to Home Page by using the button below.
                             </div>
-                            <div class="price-range aside__item">
-                                <div class="aside__title">
-                                    Price Range
-                                </div>
-                                <form>
-                                    <input type="text" class="js-range-slider" name="my_range" value="" />
-                                    <button type="submit">Search</button>
-                                </form>
-                            </div>
-                            <div class="top-sellers aside__item">
-                                <div class="aside__title">
-                                    Top 10 Sellers
-                                </div>
-                                <div class="aside__products-item">
-                                    <div class="products__item">
-                                        <a class="products__item-img"
-                                            style="background-image: url(images/content/product-item.jpg);"
-                                            href="#"></a>
-                                        <div class="products__item-content">
-                                            <div class="products__item-name">
-                                                <a class="products__item-title" href="#">
-                                                    Mobile APP
-                                                </a>
-                                                <a class="products__item-category" href="#">
-                                                    Site Template
-                                                </a>
-                                            </div>
-                                            <div class="products__item-price">
-                                                $19
-                                            </div>
-                                        </div>
-                                        <div class="products__item-info">
-                                            <a class="products__item-author" href="#">
-                                                <div class="avatar"
-                                                    style="background-image: url(images/content/user.jpg);">
-                                                </div>
-                                                <span>Radiustheme</span>
-                                            </a>
-                                            <div class="products__item-star">
-                                                <div class="rate-star"></div><span>(05)</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="products__item">
-                                        <a class="products__item-img"
-                                            style="background-image: url(images/content/product-item.jpg);"
-                                            href="#"></a>
-                                        <div class="products__item-content">
-                                            <div class="products__item-name">
-                                                <a class="products__item-title" href="#">
-                                                    Mobile APP
-                                                </a>
-                                                <a class="products__item-category" href="#">
-                                                    Site Template
-                                                </a>
-                                            </div>
-                                            <div class="products__item-price">
-                                                $19
-                                            </div>
-                                        </div>
-                                        <div class="products__item-info">
-                                            <a class="products__item-author" href="#">
-                                                <div class="avatar"
-                                                    style="background-image: url(images/content/user.jpg);">
-                                                </div>
-                                                <span>Radiustheme</span>
-                                            </a>
-                                            <div class="products__item-star">
-                                                <div class="rate-star"></div><span>(05)</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="products__item">
-                                        <a class="products__item-img"
-                                            style="background-image: url(images/content/product-item.jpg);"
-                                            href="#"></a>
-                                        <div class="products__item-content">
-                                            <div class="products__item-name">
-                                                <a class="products__item-title" href="#">
-                                                    Mobile APP
-                                                </a>
-                                                <a class="products__item-category" href="#">
-                                                    Site Template
-                                                </a>
-                                            </div>
-                                            <div class="products__item-price">
-                                                $19
-                                            </div>
-                                        </div>
-                                        <div class="products__item-info">
-                                            <a class="products__item-author" href="#">
-                                                <div class="avatar"
-                                                    style="background-image: url(images/content/user.jpg);">
-                                                </div>
-                                                <span>Radiustheme</span>
-                                            </a>
-                                            <div class="products__item-star">
-                                                <div class="rate-star"></div><span>(05)</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a class="top-sellers__link" href="#">View All</a>
-                            </div>
-                        </aside>
-                        <div class="product-page__content">
-                            <div class="product-page__filter">
-                                <div class="product-page__filter-sort">
-                                   <button class="icon-sort-amount-desc"></button> Sort by: New Items <button class="icon-unsorted"></button>
-                                </div>
-                                <div>
-                                    <button class="icon-th-large active"></button>
-                                    <button class="icon-th-list"></button>
-                                </div>
-                            </div>
-                            <div class="product-page__items">
-                                <div class="products__item">
-                                    <a class="products__item-img"
-                                        style="background-image: url(images/content/product-item.jpg);" href="#"></a>
-                                    <div class="products__item-content">
-                                        <div class="products__item-name">
-                                            <a class="products__item-title" href="#">
-                                                Responsive Mobile APP
-                                            </a>
-                                            <a class="products__item-category" href="#">
-                                                Site Template
-                                            </a>
-                                            <div class="products__item-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                            </div>
-                                        </div>
-                                        <div class="products__item-price">
-                                            $19
-                                            <span>sales (14)</span>
-                                        </div>
-                                    </div>
-                                    <div class="products__item-info">
-                                        <a class="products__item-author" href="#">
-                                            <div class="avatar" style="background-image: url(images/content/user.jpg);">
-                                            </div>
-                                            <span>Radiustheme</span>
-                                        </a>
-                                        <div class="products__item-star">
-                                            <div class="rate-star"></div>(<span>05</span>)                                            
-                                        </div>
-                                        <div class="products__item-list">
-                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
-                                            <div class="icon-heart-o">(<span>20</span>)</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="products__item">
-                                    <a class="products__item-img"
-                                        style="background-image: url(images/content/product-item.jpg);" href="#"></a>
-                                    <div class="products__item-content">
-                                        <div class="products__item-name">
-                                            <a class="products__item-title" href="#">
-                                                Responsive Mobile APP
-                                            </a>
-                                            <a class="products__item-category" href="#">
-                                                Site Template
-                                            </a>
-                                            <div class="products__item-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                            </div>
-                                        </div>
-                                        <div class="products__item-price">
-                                            $19
-                                            <span>sales (14)</span>
-                                        </div>
-                                    </div>
-                                    <div class="products__item-info">
-                                        <a class="products__item-author" href="#">
-                                            <div class="avatar" style="background-image: url(images/content/user.jpg);">
-                                            </div>
-                                            <span>Radiustheme</span>
-                                        </a>
-                                        <div class="products__item-star">
-                                            <div class="rate-star"></div>(<span>05</span>)                                            
-                                        </div>
-                                        <div class="products__item-list">
-                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
-                                            <div class="icon-heart-o">(<span>20</span>)</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="products__item">
-                                    <a class="products__item-img"
-                                        style="background-image: url(images/content/product-item.jpg);" href="#"></a>
-                                    <div class="products__item-content">
-                                        <div class="products__item-name">
-                                            <a class="products__item-title" href="#">
-                                                Responsive Mobile APP
-                                            </a>
-                                            <a class="products__item-category" href="#">
-                                                Site Template
-                                            </a>
-                                            <div class="products__item-text">
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                            </div>
-                                        </div>
-                                        <div class="products__item-price">
-                                            $19
-                                            <span>sales (14)</span>
-                                        </div>
-                                    </div>
-                                    <div class="products__item-info">
-                                        <a class="products__item-author" href="#">
-                                            <div class="avatar" style="background-image: url(images/content/user.jpg);">
-                                            </div>
-                                            <span>Radiustheme</span>
-                                        </a>
-                                        <div class="products__item-star">
-                                            <div class="rate-star"></div>(<span>05</span>)                                            
-                                        </div>
-                                        <div class="products__item-list">
-                                            <a class="icon-comment-o" href="#">(<span>10</span>)</a>
-                                            <div class="icon-heart-o">(<span>20</span>)</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pagination">
-                                <ul class="pagination__list">
-                                    <li><a class="active" href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                </ul>
-                            </div>
+                            <a class="page-404__link" href="#">
+                                Go To Home Page
+                            </a>
                         </div>
                     </div>
-                </div>
-            </section>
 
+                </div>
+            </div>
 
 
 
