--- a/app/page.html
+++ b/app/page.html
@@ -167,7 +167,7 @@
                                 <div></div>
                             </div>
                             <ul class="menu__list">
-                                <li><a href="#">Home</a>
+                                <li><a href="index.html">Home</a>
                                 <li><a href="#">About</a>
                                 <li><a href="#">WordPress</a>
                                 <li><a href="#">Joomla</a>
